vlib/v/checker/tests/undefined_array_element_type.vv
fn main() {
	a := []abc{}
	println(a)
}
